--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "html-pdf": "^3.0.1",
     "mysql": "^2.18.1"
   }
 }
