--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "fs": "0.0.1-security",
     "html-pdf": "^3.0.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1"
   }
 }
