--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -8,6 +11,7 @@
     "express-session": "^1.17.3",
     "fs": "0.0.1-security",
     "html-pdf": "^3.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
